Création d'une instance d'application

--- a/tasks/deployApps/installApps.yml
+++ b/tasks/deployApps/installApps.yml
@@ -1,6 +1,24 @@
 # Creation du repertoire contenant les binaires des applications
+# On itere sur les applications définit avec la variable applications
 - name: Create applications folder
   file: 
-    path={{ install_apps_folder }}
+    path={{ install_apps_folder }}/{{ item.name }}
     state=directory 
     recurse=yes
+  with_items: "{{ applications }}" 
+  
+# Creation des repertoires contenant les fichiers de log     
+- name: Create applications logs folder if not existing
+  file: 
+    path={{ logs_files_floder }}/{{ item.name }}/logs
+    state=directory 
+    recurse=yes
+  with_items: "{{ applications }}"
+  
+# Installation de l'application à partir de l'archive
+- name: Deploying applications
+  unarchive: 
+    src={{ artifactory_repo_url }}/{{item.package}} 
+    dest={{ install_apps_folder }}/{{ item.name }}
+    remote_src=yes
+  with_items: "{{ applications }}"
