Configurations des applications

--- a/tasks/initDeploy.yml
+++ b/tasks/initDeploy.yml
@@ -1,2 +1,5 @@
 # Installation des applications
 - include: deployApps/installApps.yml
+
+# Configuration des applications
+- include: deployApps/configApps.yml
