--- a/tasks/initDeploy.yml
+++ b/tasks/initDeploy.yml
@@ -3,3 +3,6 @@
 
 # Configuration des applications
 - include: deployApps/configApps.yml
+
+# Demarrage des applications
+- include: deployApps/startApps.yml
