--- a/tasks/initDeploy.yml
+++ b/tasks/initDeploy.yml
@@ -1,3 +1,7 @@
+# Suppression des repertoires d'applications s'ils existent
+# Arret des applications
+- include: deployApps/stopApps.yml
+
 # Installation des applications
 - include: deployApps/installApps.yml
 
